<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridView
            android:id="@+id/boardGridView"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:numColumns="8">

        </GridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/undo"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="undoMove"
                    android:text="@string/undoText"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/AI"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="AI"
                    android:text="@string/AItext"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/promotion"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:ems="10"
                    android:hint="@string/enter_promotion_type"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/resign"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="resign"
                    android:text="@string/ResignText"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/draw"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="draw"
                    android:text="@string/DrawText"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/rcrdings"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:onClick="recordList"
            android:text="@string/RecordText"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>