<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-291dp">

        <TextView
            android:id="@+id/promotitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#8C112E"
            android:text="@string/choose_pawn_promotion"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/queen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A3DFD493"
                    android:onClick="queenClicked"
                    android:text="@string/queen"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bishop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A3DFD493"
                    android:onClick="bishopClicked"
                    android:text="@string/bishop"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/knight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A3DFD493"
                    android:onClick="knightClicked"
                    android:text="@string/knight"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/rook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A3DFD493"
                    android:onClick="rookClicked"
                    android:text="@string/rook"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>